# deprag_screw_results

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
deprag_downloader/: CHANGELOG.md  CMakeLists.txt  LICENSE  package.xml  setup.py
deprag_downloader/launch/: deprag_downloader.launch
deprag_downloader/scripts/: deprag_downloader
deprag_downloader/src/deprag_downloader/: browser_interaction.py  download_directory.py  downloader.py
deprag_msgs/: CMakeLists.txt  package.xml
deprag_msgs/srv/: download_request.srv
deprag_screw_results/: CMakeLists.txt  package.xml
docs/: README.md
example/: example.csv  example.json
msg/: screwing.msg
scripts/: deprag_downloader
skills/: skill_download_curve.xml
src/: deprag_downloader_node.py  script_download_curve.cpp
src/deprag_downloader/: downloader.py
srv/: download_request.srv
