<?xml version="1.0"?>
<package format="2">
  <name>deprag_downloader</name>
  <version>0.0.0</version>
  <description>The deprag_downloader package</description>

  <maintainer email="anwar.alassadi@ipa.fraunhofer.de">Anwar Al Assadi</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/AAAipa/deprag_screw_results</url>

  <author email="anwar.alassadi@ipa.fraunhofer.de">Anwar Al Assadi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>