<?xml version="1.0"?>
<package format="2">
  <name>deprag_msgs</name>
  <version>1.0.0</version>
  <description>The deprag_msgs package</description>

  <maintainer email="anwar.alassadi@ipa.fraunhofer.de">Anwar Al Assadi</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/AAAipa/deprag_screw_results</url>

  <author email="anwar.alassadi@ipa.fraunhofer.de">Anwar Al Assadi</author>
  <author email="bab@ipa.fraunhofer.de">Balázs A. Bálint</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
