<?xml version="1.0"?>
<package format="2">
  <name>deprag_screw_results</name>
  <version>2.0.0</version>
  <description>The deprag_screw_results package</description>

  <maintainer email="anwar.alassadi@ipa.fraunhofer.de">Anwar Al Assadi</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/AAAipa/deprag_screw_results</url>

  <author email="anwar.alassadi@ipa.fraunhofer.de">Anwar Al Assadi</author>
  <author email="bab@ipa.fraunhofer.de">Balázs A. Bálint</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend version_gte="1.0.0" version_lt="2.0.0">deprag_msgs</run_depend>
  <run_depend version_gte="2.0.0" version_lt="3.0.0">deprag_downloader</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
